# SparkyBudget

./: .dockerignore  .env-example  .gitignore  LICENSE.txt  README.md  docker-compose.yaml  dockerfile  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  sparkybudget_unraid.xml
SparkyBudget/: .env  .env-example  SimpleFinToDB.py  SparkyBudget - Copy.py  SparkyBudget.py  access_url.txt  app.py  daily_balance_history.py  manage_categories.py  monthly_budget_insert.py  python  requirements.txt  token-example.txt  token.txt
SparkyBudget/py_db/: init_db.py
SparkyBudget/py_routes/: budget_summary.py  historical_trend.py  home.py  manage_categories.py
SparkyBudget/py_utils/: FileToDB.py  SimpleFinToDB.py  auth.py  currency_utils.py  daily_balance_history.py  init_db.py  manage_categories.py  monthly_budget_insert.py  scheduler.py  subcategory_update.py
SparkyBudget/static/: index.js  manifest.json  script.js  transaction-edit.js
SparkyBudget/templates/: balance_details.html  balance_details.html.jinja  balance_summary.html  balance_summary.html.jinja  budget.html.jinja  budget_kpi_boxes.html  budget_kpi_boxes.html.partial.jinja  budget_summary.html  budget_summary.html.jinja  budget_summary_chart.html  budget_summary_chart.html.jinja  budget_summary_chart.html.partial.jinja  budget_transaction_details.html.jinja  budget_transaction_details.html.partial.jinja  category.html.jinja  category_mgmt.html  category_mgmt.html.jinja  custom_report.html  historical_trend.html.jinja  index.html  index.html.jinja  login.html  (+8 more)
db_scripts/: SparkyBudget_DDL.sql
(+37 files in other folders)
