[project]
name = "SparkyBudget"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CodeWithCJ", email = "CodeWithCJ@users.noreply.github.com"},
]
dependencies = [
    "Flask>=3.0.2",
    "flask-login>=0.6.3",
    "requests>=2.31.0",
    "schedule>=1.2.1",
    "gunicorn>=21.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.2.0",
    "pylint>=3.1.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 119

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 119
profile = "black"